Sat Apr 12 11:30:54 GMT 2014  Olly Betts <olly@survex.com>

	* Really backport change which was claimed as backported in 1.2.15,
	  but wasn't actually:
	* examples/delve.cc: If -v is specified more than once, show even more
	  info in some cases.

Fri Apr 11 07:40:18 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* common/documentterm.h,api/omdocument.cc: Don't store the termname in
	  OmDocumentTerm - we were only using it in get_description() output
	  and an exception message.  Speeds up indexing etext.txt using
	  simpleindex by 0.4%, and should reduce memory usage a bit too.
	  (Change inspired by comments from Vishesh Handa on xapian-devel).

Tue Mar 18 00:04:16 GMT 2014  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Fix testcase for empty wildcard followed
	  by negation to enable FLAG_LOVEHATE so the negation is actually
	  parsed.  Fortunately the fixed testcase passes.  This testcase will
	  be fixed on trunk when the delayed wildcard expansion branch gets
	  merged.

Fri Mar 14 11:47:39 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Update.

Fri Mar 14 08:14:46 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* common/pack.h: Fix warnings with clang 5.0.

Fri Mar 14 07:11:29 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* backends/brass/brass_positionlist.h,
	  backends/chert/chert_positionlist.h,
	  backends/flint/flint_positionlist.h: Remove next_internal() methods
	  which were declared but not defined or used (left-overs from flint).
	  Reported by "Hurricane Tong".

Fri Mar 14 00:40:42 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* matcher/localsubmatch.cc,matcher/synonympostlist.cc,
	  matcher/synonympostlist.h: In SynonymPostList, avoid fetching the
	  doclength if the weighting scheme doesn't need it and the calculated
	  wdf for the synonym in <= doclength_lower_bound for the current
	  subdatabase.  (fixes #360)
